# maki

./: AGENTS.md  Cargo.toml  README.md  justfile
maki-acp/src/: server.rs
maki-agent/src/: headless.rs  types.rs
maki-agent/src/agent/: history.rs  run.rs  tool_dispatch.rs
maki-agent/src/prompts/: system.md
maki-agent/src/tools/: batch.rs  code_execution.rs  edit.rs  file_tracker.rs  grep.rs  mod.rs  multiedit.rs  read.rs  registry.rs  task.rs  todowrite.rs  write.rs
maki-config/src/: lib.rs
maki-docgen/src/: gen_providers.rs
maki-lua/src/: loader.rs  runtime.rs
maki-lua/src/api/: tool.rs  ui.rs  win.rs
maki-lua/tests/: plugin_host.rs
maki-markdown/: Cargo.toml
maki-markdown/src/: render.rs
maki-providers/src/: model.rs  model_registry.rs  tier_map.rs
maki-providers/src/providers/: deepseek.rs
maki-providers/src/providers/copilot/: auth.rs  mod.rs
maki-ui/: Cargo.toml
maki-ui/src/: chat.rs  event_loop.rs  highlight.rs  lib.rs  markdown.rs  mock.rs  selection.rs  theme.rs
maki-ui/src/agent/: agent_loop.rs
maki-ui/src/app/: shell.rs  tests.rs
maki-ui/src/components/: keybindings.rs  list_picker.rs  model_picker.rs  streaming_content.rs  tool_display.rs
plugins/edit/tests/: spec.lua
plugins/grep/: init.lua
plugins/lib/maki/: fuzzy_replace.lua
plugins/lib/tests/: spec.lua
plugins/question/: question_form.lua
plugins/question/tests/: spec.lua
plugins/read/: init.lua
plugins/todo_write/: init.lua
site/docs/templates/: base.html
src/: cli.rs  main.rs  sdk_mode.rs  setup.rs
src/cmd/: subcmd.rs  tui.rs
(+7 files in other folders)
