[package]
name = "maki-markdown"
description = "Theme-free markdown parser and width-aware renderer shared by maki-ui and the maki-lua bridge."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
maki-highlight = { workspace = true }
unicode-width = { workspace = true }

[dev-dependencies]
test-case = { workspace = true }
fastrand = { workspace = true }
